tests/NormalTests/paczka1/fuzzy1/24974803.err
Error in line 13: A969 A461 59,4
Error in line 20: A969 A969 3|5,8
Error in line 17: 8aWyOq0Vwh A969 38,2
Error in line 24: 8aWyOq0Vwh A461 0,6
Error in line 29: 8aWyOq0Vwh S750 90,1
Error in line 30: hiDsuzJSFXC A461 392,0
Error in line 32: 7HHht S750 84,7
